syntax = "proto3";

package org.openmcf.provider.azure.azurednsrecord.v1;

import "buf/validate/validate.proto";
import "org/openmcf/provider/azure/azurednsrecord/v1/spec.proto";
import "org/openmcf/provider/azure/azurednsrecord/v1/stack_outputs.proto";
import "org/openmcf/shared/metadata.proto";

// AzureDnsRecord represents a DNS record in an Azure DNS Zone.
// This resource creates individual DNS records (A, AAAA, CNAME, MX, TXT, etc.)
// within an existing Azure DNS Zone.
message AzureDnsRecord {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'azure.openmcf.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'AzureDnsRecord'];

  //metadata
  org.openmcf.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  AzureDnsRecordSpec spec = 4 [(buf.validate.field).required = true];

  //status
  AzureDnsRecordStatus status = 5;
}

// AzureDnsRecordStatus represents the status of an Azure DNS Record deployment.
message AzureDnsRecordStatus {
  //stack-outputs
  //  azure-dns-record stack-outputs
  AzureDnsRecordStackOutputs outputs = 1;
}
